# libvc

./: meson.build
src/: egl.cpp  egl.hpp  gl.cpp  gl.hpp  sdl.cpp  sdl.hpp
tests/: egl.cpp  program.cpp  sdl.cpp  sdl_egl.cpp
